force-app/main/default/objects/I_RS_Profile_Position__c/I_RS_Profile_Position__c.object-meta.xml
<CustomObject>
    <description>This object will hold Researchers Academic and Non-Academic positions sourced from Symplectic [Jira ticket: https://eawebdev.atlassian.net/browse/T2-907]</description>
    <label>Profile Position</label>
    <nameField>
        <displayFormat>POS-{0000}</displayFormat>
        <label>Profile Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>