force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  I_RS_Profile__r.I_RS_Contact__r.Id ,  I_RS_Profile__r.I_RS_Contact__r.FirstName &amp; &quot; &quot; &amp; I_RS_Profile__r.I_RS_Contact__r.LastName, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>