force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Country__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>