force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Data_Source__c</fullName>
    <description>This field will dictate the source of the data</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>