force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <description>This field will hold the organisation of the researcher</description>
    <inlineHelpText>Organisation for the Researcher</inlineHelpText>
    <label>Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>