force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Position_Title__c</fullName>
    <description>This field will hold the position title for a Researcher</description>
    <inlineHelpText>Position title</inlineHelpText>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>