force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Sub_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sub_Organisation__c</fullName>
    <description>This field will hold the sub organisation for a Researcher</description>
    <label>Sub Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>