force-app/main/default/objects/I_RS_Profile_Position__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <description>This field will describe the type of Position for a Researcher</description>
    <inlineHelpText>Type of position [Academic / Non-Academic]</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Non Academic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>